<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        tools:context="com.lab1kobiela.bmi.MainActivity">

        <Switch
            android:id="@+id/swUnitChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/tvKgM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/swUnitChoice"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:text="@string/kgm_tv" />

        <TextView
            android:id="@+id/tvLbIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/swUnitChoice"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:text="@string/lbin_tv" />

        <TextView
            android:id="@+id/tvMass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/swUnitChoice"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="40dp"
            android:text="@string/mass_tv" />

        <EditText
            android:id="@+id/etMass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/swUnitChoice"
            android:layout_toRightOf="@id/tvMass"
            android:layout_marginTop="27dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="55dp"
            android:inputType="numberDecimal"
            android:gravity="center" />

        <TextView
            android:id="@+id/tvHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvMass"
            android:layout_marginTop="37dp"
            android:layout_marginLeft="12dp"
            android:text="@string/height_tv" />

        <EditText
            android:id="@+id/etHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etMass"
            android:layout_toRightOf="@id/tvHeight"
            android:layout_marginTop="12dp"
            android:layout_marginRight="55dp"
            android:inputType="numberDecimal"
            android:gravity="center"/>


        <Button
            android:id="@+id/bCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etHeight"
            android:layout_marginTop="35dp"
            android:layout_centerHorizontal="true"
            android:text="@string/count_button" />

        <TextView
            android:id="@+id/tvBMI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bCount"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:text="@string/BMI_tv"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tvBMIResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvBMI"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            android:text="@string/result_tv"
            android:textSize="50sp" />

    </RelativeLayout>
</ScrollView>